# yacoin

./: .gitignore  .gitlab-ci.yml  .gitpod.yml  .sonarcloud.properties  .sonarqube.properties  .travis.yml  COPYING  Dockerfile  INSTALL  Makefile.am  README.md  WIN_BUILD_INSTRUCTIONS.txt  aclocal.m4  appveyor.yml  azure-pipelines.yml  blockencodings.cpp  build-windows-in-docker.sh  build.sh  config.status  configure  configure.ac  dependencies.sh  libtool  reproducebug.sh  yacoin-qt-linux.pro  yacoin-qt-tdm32.pro  yacoin-qt.pro  yenvmake.sh
.circleci/: config.yml
.github/workflows/: ccpp.yml  yacoinbuildmultiplatform.yml
MSVC/: YACOIN TODO
contrib/bitrpc/: bitrpc.py
contrib/debian/: changelog  control  copyright  rules  watch  yacoin-qt.desktop  yacoin-qt.desktop.desktop  yacoin-qt.install  yacoin-qt.lintian-overrides  yacoin-qt.manpages  yacoind.install
contrib/debian/examples/: yacoin.conf
contrib/debian/manpages/: yacoin-qt.1  yacoin.conf.5  yacoind.1
contrib/docker_builder/: dockerfile
contrib/gentoo/: yacoin-0.5.0.ebuild
contrib/initscripts/bsd/: yacoin
contrib/initscripts/lsb/: yacoind
contrib/initscripts/systemd/: yacoind.service
contrib/macdeploy/: fancy.plist  macdeployqtplus  notes.txt
contrib/seeds/: makeseeds.py
contrib/seeds/getseeds/: getseeds.py
contrib/wallettools/: walletchangepass.py  walletunlock.py
debian/: changelog  control  rules  yacoin-qt.install
debian/examples/: yacoin.conf
debian/manpages/: yacoin.conf.5  yacoind.1
doc/: Doxyfile  EncryptMsgAPI.txt  EncryptRPC.txt  MalleableKeys.txt  README  README_ubuntu.txt  README_windows.txt  Video scripts and notes.txt  assets-attribution.txt  build-msw.txt  build-osx.txt  build-unix.md  build-unix.txt  building yacoin-qt for android under Windows.txt  coding.txt  readme-qt.rst  release-process.txt  tor.md
release/: yacoind
share/: genbuild.sh  setup.nsi  ui.rc
src/: .travis.yml  JustInCase.h  LibBoolEE.h  MSVC_warnings.h  MSVC_warnings.pop.h  MSVC_warnings.push.h  Makefile.am  Makefile.qt.include  Yassert.h  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.h  amount.h  arith_uint256.cpp  asm-wrapper.cpp  base58.cpp  base58.h  bignum.h  bitcoinrpc.cpp  bitcoinrpc.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.h  compat.h  core_memusage.h  crypter.cpp  crypter.h  (+117 more)
src/.circleci/: config.yml
src/assets/: assetdb.cpp  assetdb.h  assets.cpp  assets.h  assettypes.cpp  assettypes.h
src/compat/: endian.h  strnlen.cpp
src/consensus/: consensus.cpp  consensus.h
src/crypto/: chacha20.cpp  chacha20.h  common.h  hmac_sha512.cpp  ripemd160.cpp  ripemd160.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  siphash.cpp
src/crypto/scrypt-jane/: scrypt-jane.c
src/crypto/scrypt/asm/: asm-wrapper.cpp
src/crypto/scrypt/generic/: scrypt-generic.cpp
src/crypto/scrypt/intrin/: scrypt-sse2.cpp
src/json/: json_spirit_reader_template.h  json_spirit_writer.cpp  json_spirit_writer_template.h
src/leveldb/: build_detect_platform
src/leveldb/db/: db_bench.cc
src/leveldb/helpers/memenv/: memenv.cc
src/leveldb/table/: bitcoinrpc.cpp  net.cpp  rpcmining.cpp  version.cpp  wallet.cpp
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: aboutdialog.cpp  aboutdialog.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  explorer.cpp  explorer.h  guiutil.cpp  guiutil.h  intro.cpp  mintingtablemodel.cpp  multisigdialog.cpp  multisiginputentry.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  qrcodedialog.cpp  qtipcserver.cpp  qtipcserver.h  qvalidatedlineedit.cpp  qvalidatedlineedit.h  rpcconsole.cpp  rpcconsole.h  secondauthdialog.cpp  sendcoinsdialog.cpp  sendcoinsdialog.h  (+9 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  explorer.ui  explorerBlockPage.ui  explorerTransactionPage.ui  intro.ui  multisigdialog.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  secondauthdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_en.ts  bitcoin_ru.ts  bitcoin_uk.ts
src/qt/res/: bitcoin-qt.rc
src/qt/res/icons/: bitcoin.icns
src/qt/res/images/: Thumbs.db
src/script/: script.cpp  script.h
src/scrypt-jane/: scrypt-jane.c  scrypt-jane.h
src/scrypt-jane/code/: scrypt-jane-portable-x86.h
src/support/: cleanse.cpp  cleanse.h
src/support/allocators/: zeroafterfree.h
src/test/: DoS_tests.cpp  bignum_tests.cpp  getarg_tests.cpp  miner_tests.cpp  multisig_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  sigopcount_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/tokens/: tokendb.cpp  tokendb.h  tokens.cpp  tokens.h  tokentypes.cpp  tokentypes.h
test/: config.ini  config.ini.in
test/functional/: feature_basic_transfer.py  feature_block_reward.py  feature_defaultport.py  feature_describe_redeemscript.py  feature_epoch.py  feature_getrpcinfo.py  feature_hardfork_1_0.py  feature_help.py  feature_op_cltv.py  feature_op_csv.py  feature_set_min_fee.py  feature_timelock.py  feature_tokens.py  feature_tx_malleability.py  feature_uptime.py  interface_rpc.py  mining_basic.py  rpc_check.py  test_runner.py
test/functional/test_framework/: authproxy.py  blocktools.py  messages.py  mininode.py  test_framework.py  test_node.py  util.py
test/functionalv0/: feature_help.py  test_runner.py
test/functionalv0/test_framework/: test_framework.py  util.py
utils/: build-deps.sh  build-qt.sh  build-yacoind.sh  build.sh
utils/scripts/: _boost  _qrencode  cmdboost.bat  yenv  yprofile
